--- a/Spoilers.org
+++ b/Spoilers.org
@@ -44,6 +44,11 @@ Note: Grav cleverly invents the concept of "lawyer", works hard to become one, f
 
 * Notes
 
+- Notes about military:
+  - We need a good name for the camp: "Choh-Ov is an xxx"
+  - Towns around military bases are universally a disaster (as they are in Reality, along with University towns) The following name choices were made to make it easier to remember (For me! We should probably do some Okinawa bases.)
+    - Fayt-Caves ==> Fayetteville
+    - Choh-Ov ==> Fort Bragg (get it?)
 - We eventually find that you can say "BS" in place of "Boulder-Stump" and for some reason be totally OK (long explanation of translator's choices when terming it "BS".)
 - It would be awesome if when Verk kicks it, they find a great big tumor (heh. maybe he falls off a cliff and this grey turd comes oozing out of his skull amidst his brains. The Crec know, "this ain't right"). Knowing "this ain't right", they ponder the possibility that this might have been a/the /cause/ for all the fun Verk features.
 - Self Marriage ceremony (no, this is not "gay"): The Crec have a Self-Marriage ceremony, where the caveboy-coming-of-age takes a bunch of wedding vows about loving himself no matter what. Nobody laughs, a few ol' gits cry. This among men is considered waaay more important than the other kinds of marriage. It is here where we revisit some of Grav's delightful encounters with Verk.
