--- a/fragments/their_last_club-drill.org
+++ b/fragments/their_last_club-drill.org
@@ -2,27 +2,27 @@
 #+HTML_HEAD: <link rel="stylesheet" type="text/css" href="../index.css" />
 #+OPTIONS: num:nil
 
-Club-drill was excrutiating in the Grav and Gog in ways that they couldn't manage to communicate to others. It was mostly about being told what to do and critisized by the ignorant and linear thinkers that were inevitably the "top bronze".
+Club-drill was excruciating in the Grav and Gog in ways that they couldn't manage to communicate to others. It was mostly about being told what to do and criticized by the ignorant and linear thinkers that were inevitably the "top bronze".
 
-Another concept that they wouldn't know about is "selection bias". It's a sublt idea. It would be a while before that idea got identified and tagged.
+Another concept they couldn't explain nor even know of its existence is "selection bias". It's a subtle idea. It would be a while before that idea got identified and tagged.
 
-In words that a Crec might understand: The cavemen who made thier way to the top in the heiracrchy were the type who really liked bossing people about, the wisdom of their plans for you was not part of their calculations. Given enough cavemen, you will find some outliers. You may not know anyone who likes to give orders, doesn't like to be questioned, and doesn't care whether they are "right" by /your/ definition. But how many CO's[fn:: Caveman Officer] do we need? Not many. And they'll find their way toward their dream job. Everyone should. Recruiting was no small part of the Armed-Forest. Outreach, recruitment and other kinds of advertiszing paid off in organization growth, as it is meant to do.
+In words that a Crec might understand: The cavemen who made their way to the top in the hierarchy were the type who really liked bossing people about, the wisdom of their plans for you was not part of their calculations. Given enough cavemen, you will find some outliers. You may not know anyone who likes to give orders, doesn't like to be questioned, and doesn't care whether they are "right" by /your/ definition. But how many CO's[fn:: Caveman Officer] do we need? Not many. And they'll find their way toward their dream job. Everyone should. Recruiting was no small part of the Armed-Forest. Outreach, recruitment and other kinds of advertising paid off in organization growth, as it is meant to do.
 
-You could and probably would some day be drafted. But to make a career out of it was a different trac. If you were not a CO, you pretty much spent all your time learning to kill or killing. They were more the managerial type.
+You could and probably would some day be drafted. But to make a career out of it was a different tack. If you were not a CO, you pretty much spent all your time learning to kill or killing. They were more the managerial type.
 
-And so, since your fate, if a man, was to be involved in all this anyway, /completely voulentary/ "club-drill" was held in locations around the Forest. They were usually overseen by some Great Bear war hero, and the training ground nearest Borv Hulk was xxxcamp, surrounded by a kind of suburb called xxxburb, was run by Verk. The title of this role, the camp head, was Mother Bear[fn:: Absolutely no one saw a hint of humor or absurdity in this title. Yes, it was well known that mother bears are female, but mother bears were fierce as monkey-business.]. Verk was xxx's Mother Bear.
+And so, since your fate, if a man, was to be involved in all this anyway, /completely voluntary/ "club-drill" was held in locations around the Forest. They were usually overseen by some Great Bear war hero, and the training ground nearest Bhorv Zolk was xxxcamp, surrounded by a kind of suburb called xxxburb, was run by Verk. The title of this role, the camp head, was Mother Bear[fn:: Absolutely no one saw a hint of humor or absurdity in this title. Yes, it was well known that mother bears are female, but mother bears were fierce as monkey-business.]. Verk was xxx's Mother Bear.
 
-xxxburb was a shanty town, but made out of rock, which really looks nicer than shanty, any way you cut it. The settlment surrounding xxxcamp was seedy, crime-ridden, full of loud parties on an ongoing basis, had an entire district devoted to hire-baby-makers and thier trade. xxxcamp was more or less at the very center of this fried egg of empty calories.
+xxxburb was a shanty town, but made out of rock, which really looks nicer than shanty, any way you cut it. The settlement surrounding xxxcamp was seedy, crime-ridden, full of loud parties on an ongoing basis, had an entire district devoted to hire-baby-makers and their trade. xxxcamp was more or less at the very center of this fried egg of empty calories.
 
-And it was small-knowledge[fn:: 'small[-one]-knowledge': common sense, widely known.] that this was the arrangment surrounding more or less every training camp <-xxx in the Forest and its protectorates. No one thought this amiss. It was small-knowledge.
+And it was small-knowledge[fn:: 'small[-one]-knowledge': common sense, widely known.] that this was the arrangement surrounding more or less every training camp <-xxx in the Forest and its protectorates. No one thought this amiss. It was small-knowledge.
 
-Grav and Gog had decided to leave the day after the revelation of the xxx we decide upon a name xxx giving them the opportunity to take make a leasurly day of it, needing only to cover 2 all-finger palm of pretty standard jungle, with the way well traveled and therefor clearly marked, well serviced by vendors, and safe-with-many. They had even let themselves sleep in a bit.
+Grav and Gog had decided to leave the day after the revelation of the xxx we decide upon a name xxx giving them the opportunity to take make a leisurely day of it, needing only to cover 2 all-finger palm of pretty standard jungle, with the way well traveled and therefor clearly marked, well serviced by vendors, and safe-with-many. They had even let themselves sleep in a bit.
 
-As Borv Glorb <-xxx faded into the distance, the path to the morning-sun-left-back-side was gently rolling hills and low shrubs for several palm. Glor Grack <-xxx could be seen fading into the distance, which was a nice way to say goodbye to home. One got a feeling that it was very big, visible from all this way, and would therefor surely be there when you got back.
+As Bhorv Zolk faded into the distance, the path to the morning-sun-left-back-side was gently rolling hills and low shrubs for several palm. Bhorv Zolk could be seen fading into the distance, which was a nice way to say goodbye to home. One got a feeling that it was very big, visible from all this way, and would therefor surely be there when you got back.
 
-Gog hummed, whisltled and yipped an improvised song, that Grav didn't really want to admit was actually pretty good.
+Gog hummed, whistled and yipped an improvised song, that Grav didn't really want to admit was actually pretty good.
 
-He'd worked on convincing Gog to have a visit with Kapitle, the music-scratcher nearest BLorvGlop <- xxx. Business was good and all number of copy-protection[fn:: explain!!] schemes were the key to success, Kapitle knew[fn:: But would not share.] He had a regular rotation of all-finger-and throat-choiors that would snare[fn:: As in the impromptu bush trap. Their word for "kill at" or "really make a killing".] his most profitable demographic: all-finger-and boys trying to woo their crush by performing some music or other, using /his/ scratching standards and training system.
+He'd worked on convincing Gog to have a visit with Kapitle, the music-scratcher nearest Bhorv Zolk. Business was good and all number of copy-protection[fn:: explain!!] schemes were the key to success, Kapitle knew[fn:: But would not share.] He had a regular rotation of all-finger-and throat-and-drum-choirs that would snare[fn:: As in the impromptu bush trap. Their word for "kill at" or "really make a killing".] his most profitable demographic: all-finger-and boys trying to woo their crush by performing some music or other, using /his/ scratching standards and training system.
 
 Sell the materials needed to perform a cover of the latest hit was really all their was in the music business, outside of performing of course.
 
