--- a/fragments/their_last_club-drill.org
+++ b/fragments/their_last_club-drill.org
@@ -10,9 +10,9 @@ In words that a Crec might understand: The cavemen who made their way to the top
 
 You could and probably would some day be drafted. But to make a career out of it was a different tack. If you were not a CO, you pretty much spent all your time learning to kill or killing. They were more the managerial type.
 
-And so, since your fate, if a man, was to be involved in all this anyway, /completely voluntary/ "club-drill" was held in locations around the Forest. They were usually overseen by some Great Bear war hero, and the training ground nearest Bhorv Zolk was xxxcamp, surrounded by a kind of suburb called xxxburb, was run by Verk. The title of this role, the camp head, was Mother Bear[fn:: Absolutely no one saw a hint of humor or absurdity in this title. Yes, it was well known that mother bears are female, but mother bears were fierce as monkey-business.]. Verk was xxx's Mother Bear.
+And so, since your fate, if a man, was to be involved in all this anyway, /completely voluntary/ "club-drill" was held in locations around the Forest. They were usually overseen by some Great Bear war hero, and the training ground nearest Bhorv Zolk was Choh-Ov, surrounded by a kind of suburb called Fayt-Caves, was run by Verk. The title of this role, the camp head, was Mother Bear[fn:: Absolutely no one saw a hint of humor or absurdity in this title. Yes, it was well known that mother bears are female, but mother bears were fierce as monkey-business.]. Verk was Choh-Ov's Mother Bear.
 
-xxxburb was a shanty town, but made out of rock, which really looks nicer than shanty, any way you cut it. The settlement surrounding xxxcamp was seedy, crime-ridden, full of loud parties on an ongoing basis, had an entire district devoted to hire-baby-makers and their trade. xxxcamp was more or less at the very center of this fried egg of empty calories.
+Fayt-Caves was a shanty town, but made out of rock, which really looks nicer than shanty, any way you cut it. The settlement surrounding Choh-Ov was seedy, crime-ridden, full of loud parties on an ongoing basis, had an entire district devoted to hire-baby-makers and their trade. Choh-Ov was more or less at the very center of this fried egg of empty calories.
 
 And it was small-knowledge[fn:: 'small[-one]-knowledge': common sense, widely known.] that this was the arrangement surrounding more or less every training camp <-xxx in the Forest and its protectorates. No one thought this amiss. It was small-knowledge.
 
@@ -30,8 +30,8 @@ Grav just enjoyed the well selected traveling music and thought a lot about how 
 
 Would word have gotten out? Verk would not be at the camp, not feeling any particular need to be there. He would make his way back eventually, at his own pace.
 
-Verk owned, what would be considered a castle almost universally, a few palm outside of xxxburb, a point that the men would pass today, if they got their huff on <-xxx??.
+Verk owned, what would be considered a castle almost universally, a few palm outside of Fayt-Caves, a point that the men would pass today, if they got their huff on <-xxx??.
 
-Would word of the what-do-we-call-it have made it to xxxcamp?
+Would word of the what-do-we-call-it have made it to Choh-Ov?
 
 with hastily, poorly-appointed row after row of little hills, with a kind of crash pad of a cave.
