--- a/fragments/their_last_club-drill.org
+++ b/fragments/their_last_club-drill.org
@@ -16,7 +16,9 @@ Fayt-Caves was a shanty town, but made out of rock, which really looks nicer tha
 
 And it was small-knowledge[fn:: 'small[-one]-knowledge': common sense, widely known.] that this was the arrangement surrounding more or less every training camp <-xxx in the Forest and its protectorates. No one thought this amiss. It was small-knowledge.
 
-Grav and Gog had decided to leave the day after the revelation of the xxx we decide upon a name xxx giving them the opportunity to take make a leisurely day of it, needing only to cover 2 all-finger palm of pretty standard jungle, with the way well traveled and therefor clearly marked, well serviced by vendors, and safe-with-many. They had even let themselves sleep in a bit.
+Grav and Gog had decided to leave the day after the revelation of Ender's-Sword giving them the opportunity to take make a leisurely day of it, needing only to cover 2 all-finger palm of pretty standard jungle, with the way well traveled and therefor clearly marked, well serviced by vendors, and safe-with-many. They had even let themselves sleep in a bit. Since the final part of a journey crossed a wide, flat, scrubby plane and the moon was sufficiently bright, they would be able to walk for hours after dark set in.
+
+In the worst case, they planned to bevvy one night, wake up early and arrive at the Choh-Ov before reveille <-xxx.
 
 As Bhorv Zolk faded into the distance, the path to the morning-sun-left-back-side was gently rolling hills and low shrubs for several palm. Bhorv Zolk could be seen fading into the distance, which was a nice way to say goodbye to home. One got a feeling that it was very big, visible from all this way, and would therefor surely be there when you got back.
 
@@ -30,8 +32,28 @@ Grav just enjoyed the well selected traveling music and thought a lot about how 
 
 Would word have gotten out? Verk would not be at the camp, not feeling any particular need to be there. He would make his way back eventually, at his own pace.
 
-Verk owned, what would be considered a castle almost universally, a few palm outside of Fayt-Caves, a point that the men would pass today, if they got their huff on <-xxx??.
+A few palm outside of Fayt-Caves, Verk owned what would be considered a castle almost universally; a point that the men would pass today, if they kept their pace.
 
-Would word of the what-do-we-call-it have made it to Choh-Ov?
+"Would word of the Ender's-Sword have made it to Choh-Ov?", Grav wondered allowed.
+
+Without breaking his stride, Gog abruptly stopped his music and looked at Grav, possibly thinking, or possibly for superb comedic timing.
+
+"You mean Ender's-Stump?"
+
+Grav's walk became a staggering, rhythmic stomp as he laughed maniacally while continuing to walk. He eventually gave up on that and let himself fall into an enormous healthy, dark-pruple heather shrub. He continued to laugh face-down at the dirt and detritus at the ancient shrub's base.
+
+He eventually righted himself, making a lot of noise as he pushed himself up, snapping small branches and spitting out the various blooms and twigs that ended up in his open mouth.
+
+"Scout[fn:: "Dude!!"], you need to lay off of that stuff! Not everyone is as mirth-filled as us, you know. The Forest Executioners are not known for their stoatishness[fn:: Sillyness].", said Grav.
+
+"Eegh. I'm tired of worrying about it, to be frank." Gog was such an artist with his banana-language that he was no longer entertained by it, and so was laughing not at all. It seemed like he just thought of it as his 'job'—trudging through another day of saying things that caused others to nearly have a stroke with hilarity.
+
+"I mean, yeah, of course I will always take reasonable precautions. But mount it, it becomes so much of a drain on me to constantly have to edit my words, that I'm willing to be a bit 'strategically reckless' in order to just relax for a /sewing/ change!!" Gog seemed to be shaking his head in disgust.
+
+"They /are/ just words, aren't they?", said Gog, sharing some of Gog's annoyance at the arbitrariness of it all. Though, he was not yet an angry rebel like Gog. "It angers me too. Some things are at the same time both infuriatingly stupid and unjust, while at the same time being completely small-knowledge to seemingly everyone."
+
+Grav continued. "Did you know that in XXX you can have three toenails pulled out for underpaying your take-money? Regardless of circumstances? At least the Crec haven't gone that crazy.
+
+If you find something in the jungle of any value at all, the XXX 'claim' on half of it, without any kind of justification. It's just /theirs/ and that's that!"
 
 with hastily, poorly-appointed row after row of little hills, with a kind of crash pad of a cave.
