--- a/002.org
+++ b/002.org
@@ -602,6 +602,14 @@ At all this, the amount of apparent blindness to the obvious may be striking to 
 
 "Father-Brother Verk, what shall we do with it?", asked one of Verk's Under-Men.
 
+"First, it needs a name.", said Verk. "Kin, I believe you likened it to a weapon."
+
+Kin, knowing that he did, not smiled broadly.
+
+"I shall call it, /Ender's-Sword/, for it is mighty and surely will find its use in making the Crec Forest mightier yet!" Verk had his head tilted slightly back. His closed eyelids were twitching as though fighting to remain open.
+
+There was a gently, admiring applause and periodic tugging of noses from the audience.
+
 "As a gift to one of the Elder-Quorum's finer charities, it will of course make its way eventually to the Hard-Guard-Cave, but tonight it goes home with me, so I may talk with The-Ender and try in my humility to divine his message. Made-Boy-Wife-of-Verk[fn:: See Appendix: 'Language and Naming Surrounding Women'.] and I will ensure it encounters no ill treatment."
 
 "Very good, Father-Brother Verk! Gog and I will package it in the manor in which we did for its movement from the mine. We encountered problems with our first attempt. It seems to have some tricks up its sleeve[fn:: Not having shirt sleeves, the Crec actually use a similar expression that roughly means, 'magic in its garments'.]."
