--- a/fragments/their_last_club-drill.org
+++ b/fragments/their_last_club-drill.org
@@ -54,6 +54,11 @@ He eventually righted himself, making a lot of noise as he pushed himself up, sn
 
 Grav continued. "Did you know that in XXX you can have three toenails pulled out for underpaying your take-money? Regardless of circumstances? At least the Crec haven't gone that crazy.
 
-If you find something in the jungle of any value at all, the XXX 'claim' on half of it, without any kind of justification. It's just /theirs/ and that's that!"
+If you find something in the jungle of any value at all, the XXX Forest has a 'claim' on half of it, without any kind of justification. It's just /theirs/ and that's that!"
 
 with hastily, poorly-appointed row after row of little hills, with a kind of crash pad of a cave.
+
+
+
+
+
