--- a/001.org
+++ b/001.org
@@ -57,11 +57,11 @@ He had had a lot to think about with the "enjoyable" family get-together coming 
 
 It was all about prediction, in Grav's view. Currently he was working on a predict-tool regarding people's behavior. He had several imperfect, but pretty good predict-tools about what things cause different reactions in fellow clan members.
 
-For instance, he said, "The Chief has made a new take-part-money requirement involving the production mill stones" to Gher, an older great cousin. Before doing this, he made sure he remembered what he thought would happen. Grav put in extra effort to make his delivery as believable as possible. As predicted, in about 5 drop-stone, Gher went through phases of rage, disbelief, some kind of forced serenity, and then rage again. Gher would compose a response in his head, make a "pop" sound with his mouth as he began to speak, but then reconsider as another, better thing to say occurred to him. Grav always wondered why he didn't just decide what he was going to say to begin with, and /then/ open his mouth, possibly even without making a sound.
+For instance, he said, "The Chief has made a new take-part-value requirement involving the production mill stones" to Gher, an older great cousin. Before doing this, he made sure he remembered what he thought would happen. Grav put in extra effort to make his delivery as believable as possible. As predicted, in about 5 drop-stone, Gher went through phases of rage, disbelief, some kind of forced serenity, and then rage again. Gher would compose a response in his head, make a "pop" sound with his mouth as he began to speak, but then reconsider as another, better thing to say occurred to him. Grav always wondered why he didn't just decide what he was going to say to begin with, and /then/ open his mouth, possibly even without making a sound.
 
 The response that Gher apparently thought of as the winner in this competition of ideas was as follows:
 
-"A take-money on the working Crec is a take-money on productivity! These Forest-Deer Elders are just out to make the Elders-Quorum bigger all the time!"
+"A take-value on the working Crec is a take-value on productivity! These Forest-Deer Elders are just out to make the Elders-Quorum bigger all the time!"
 
 Grav made a gentle, mollifying smile, shook his head slowly, and shrugged. He'd been keeping score of his successes and failures. Decidedly a success, this one. His head immediately went to the question of how he would /know/ that. Maybe by the time he walked to his burrow and scratched in this result, his memory of what had happened would be shaped by something along the way. What if one of Gher's daughters had tried to jump-scare him on his way. He did not care for those girls, and he blamed Gher for the kind of people they turned out to be, so far. Who else to blame, the child? Father-Brother Verk would think so. Beat the food-clay out of a disappointing child, repeat until results emerge.
 
