--- a/fragments/their_last_club-drill.org
+++ b/fragments/their_last_club-drill.org
@@ -52,7 +52,7 @@ He eventually righted himself, making a lot of noise as he pushed himself up, sn
 
 "They /are/ just words, aren't they?", said Gog, sharing some of Gog's annoyance at the arbitrariness of it all. Though, he was not yet an angry rebel like Gog. "It angers me too. Some things are at the same time both infuriatingly stupid and unjust, while at the same time being completely small-knowledge to seemingly everyone."
 
-Grav continued. "Did you know that in XXX you can have three toenails pulled out for underpaying your take-money? Regardless of circumstances? At least the Crec haven't gone that crazy.
+Grav continued. "Did you know that in XXX you can have three toenails pulled out for underpaying your take-value? Regardless of circumstances? At least the Crec haven't gone that crazy.
 
 If you find something in the jungle of any value at all, the XXX Forest has a 'claim' on half of it, without any kind of justification. It's just /theirs/ and that's that!"
 
