--- a/Appendix.org
+++ b/Appendix.org
@@ -58,8 +58,8 @@ Be careful not to over-think the meaning, but it should be apparent from context
 - soot-pallet: Wherever fire has deposited soot on an area of stone that has been used for writing, if you write in it, it becomes a "soot-pallet". It's as common as and thought of like billboards, but are not thought of as owned, so it's acceptable for someone to write something (proper) on such a sooted stone surface. Trespassing is still a thing, though.
 - squirrel-hoard: An abstract quantity meaning "a lot", if you thought "a whole bunch of" you'd be close.
 - strength: "Force", in the way used in physics.
-- take-money: Shorthand for take-part-money. Take-money also means "robbery" or "mugging", but the Crec universally do not make the connection.
-- take-part-money: A tax.
+- take-value: Shorthand for take-part-value. Take-value also means "robbery" or "mugging", but the Crec universally do not make the connection.
+- take-part-value: A tax.
 - value-stone: A unique, hopefully big, visually appealing gem or mineral (there are many sources.) They are the currency, but their relative value is determined at haggling time, which makes for double the arguments.
 - Wolf-Sleep: To meditate peacefully by actively observing all of one's sensory input, minus vision. Learning to actively monitor every inch of your skin, every sound you hear, perhaps the taste of a recent meal, one can paradoxically become quite calm and contented. Importantly, one does not "analize" the input. This leads to the kind of /thinking/ that is to be quieted. This is called Wolf-Sleep, because once the trick is mastered, practitioners, always observing their breath, from thoat outward, would be able to jump into this relaxed, serene state with ever more ease, which reliably made their third, fourth of fifth breath a big, relaxed, satisfying, full-body "hmuffffffff...." that observers of wolves and modern dog owners are familiar with. The most elite practitioners, those who understood this as more than just a way to relax, were able to endure most any sensation with genuine enjoyment, so long as it did not pose a threat. For example, a raw, bloody scrape on your leg will be crawling with gnats and flies in a matter of minutes. While this /is/ a kind of threat, and the Crec know it, one only needs to rinse the wound in a clean river and scrub it with light sand from time to time. Knowing that this sensation is no real threat it goes right to the "observe" category; not dwell upon, or worry aboout, just "observe", like all other input. These many hundred legs provided an enormous amount of "input" for the skilled wolf-sleeper to make a practice of trying to absorb ever more detail about this bit of sensory input. Some claimed to be able to note every bug's footfall and every prodding with mouth-parts; knowing usually which direction any of his visitors might be facing.
 - Workers: The "Workers" describe normal people doing normal things. They are distinguished from others only in that they 'sense they are part of something'. They're OK. They're surly but unsure of themselves. They become agreeable and polite when there is talk of any kind of increase in their pay. Grav thinks these people could just choose to focus on other things.
